--- a/AnimatedLoginSignUP-UIKIT/Base.lproj/Main.storyboard
+++ b/AnimatedLoginSignUP-UIKIT/Base.lproj/Main.storyboard
@@ -1,24 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="dLR-iD-ux4">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="bUe-xy-Gyg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wyk-9E-akm">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hut-8843868_1280" translatesAutoresizingMaskIntoConstraints="NO" id="eHN-qD-lVe">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animated Login &amp; SignUp" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADb-tv-q86">
+                                <rect key="frame" x="20" y="129" width="333" height="64"/>
+                                <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fZD-iK-zhy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eHN-qD-lVe" firstAttribute="top" secondItem="wyk-9E-akm" secondAttribute="top" id="6YF-3c-Rna"/>
+                            <constraint firstItem="eHN-qD-lVe" firstAttribute="trailing" secondItem="fZD-iK-zhy" secondAttribute="trailing" id="70c-Vf-EPx"/>
+                            <constraint firstItem="fZD-iK-zhy" firstAttribute="trailing" secondItem="ADb-tv-q86" secondAttribute="trailing" constant="40" id="7t0-fs-AMf"/>
+                            <constraint firstAttribute="bottom" secondItem="eHN-qD-lVe" secondAttribute="bottom" id="81u-I4-Nft"/>
+                            <constraint firstItem="ADb-tv-q86" firstAttribute="top" secondItem="fZD-iK-zhy" secondAttribute="top" constant="70" id="Qha-Bj-oRL"/>
+                            <constraint firstItem="ADb-tv-q86" firstAttribute="leading" secondItem="fZD-iK-zhy" secondAttribute="leading" constant="20" id="kCm-Sf-Y98"/>
+                            <constraint firstItem="eHN-qD-lVe" firstAttribute="leading" secondItem="fZD-iK-zhy" secondAttribute="leading" id="vej-aV-vwt"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="teb-GX-RfD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-300" y="16.901408450704228"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hut-8843868_1280" width="853" height="1280"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
