--- a/AnimatedLoginSignUP-UIKIT/View/Base.lproj/Main.storyboard
+++ b/AnimatedLoginSignUP-UIKIT/View/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="697-da-wEz" customClass="AnimatableView" customModule="IBAnimatable">
-                                <rect key="frame" x="20" y="197" width="350" height="450"/>
+                                <rect key="frame" x="20" y="157" width="350" height="530"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUt-2g-iVu">
                                         <rect key="frame" x="10" y="30" width="330" height="21"/>
@@ -93,7 +93,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6MX-mc-g4a" customClass="AnimatableTextField" customModule="IBAnimatable">
-                                        <rect key="frame" x="22" y="81" width="306" height="55"/>
+                                        <rect key="frame" x="22" y="156" width="306" height="55"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.49147002550000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="n3U-CI-deN"/>
@@ -117,7 +117,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder=" Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D8b-eD-nEN" customClass="AnimatableTextField" customModule="IBAnimatable">
-                                        <rect key="frame" x="22" y="156" width="306" height="55"/>
+                                        <rect key="frame" x="22" y="231" width="306" height="55"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.49147002550000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="EVM-TC-Qed"/>
@@ -141,7 +141,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHg-iM-qHA" customClass="AnimatableButton" customModule="IBAnimatable">
-                                        <rect key="frame" x="20" y="251" width="310" height="55"/>
+                                        <rect key="frame" x="20" y="326" width="310" height="55"/>
                                         <color key="backgroundColor" name="#a86365"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="6Ah-Ui-cjD"/>
@@ -162,13 +162,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qeg-dQ-DD4" customClass="AnimatableLabel" customModule="IBAnimatable">
-                                        <rect key="frame" x="20" y="326" width="310" height="21"/>
+                                        <rect key="frame" x="20" y="401" width="310" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="viZ-qe-6Sr" customClass="AnimatableButton" customModule="IBAnimatable">
-                                        <rect key="frame" x="20" y="372" width="310" height="55"/>
+                                        <rect key="frame" x="20" y="447" width="310" height="55"/>
                                         <color key="backgroundColor" name="#a86365"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="QX9-Tx-HJU"/>
@@ -189,14 +189,39 @@
                                             <action selector="signupAction:" destination="QL1-hS-esD" eventType="touchUpInside" id="keY-AM-rLB"/>
                                         </connections>
                                     </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XuP-eJ-el8" customClass="AnimatableTextField" customModule="IBAnimatable">
+                                        <rect key="frame" x="22" y="81" width="306" height="55"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.49147002550000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="62E-Yx-GdI"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                                <color key="value" white="1" alpha="0.58835565479999996" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                                                <color key="value" systemColor="labelColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="#a86365"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.48979591836734693" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="6MX-mc-g4a" firstAttribute="top" secondItem="XuP-eJ-el8" secondAttribute="bottom" constant="20" id="0Zo-o1-Koc"/>
                                     <constraint firstAttribute="trailing" secondItem="viZ-qe-6Sr" secondAttribute="trailing" constant="20" id="4DZ-ej-Evh"/>
                                     <constraint firstAttribute="trailing" secondItem="D8b-eD-nEN" secondAttribute="trailing" constant="22" id="7A8-MW-lGK"/>
                                     <constraint firstAttribute="trailing" secondItem="iUt-2g-iVu" secondAttribute="trailing" constant="10" id="8Do-ZF-PTL"/>
-                                    <constraint firstItem="6MX-mc-g4a" firstAttribute="top" secondItem="iUt-2g-iVu" secondAttribute="bottom" constant="30" id="9M0-Eb-CrU"/>
                                     <constraint firstAttribute="width" constant="350" id="BZO-5y-L12"/>
+                                    <constraint firstItem="XuP-eJ-el8" firstAttribute="leading" secondItem="697-da-wEz" secondAttribute="leading" constant="22" id="CEf-8d-Lmn"/>
                                     <constraint firstItem="iUt-2g-iVu" firstAttribute="top" secondItem="697-da-wEz" secondAttribute="top" constant="30" id="HzA-10-hsx"/>
                                     <constraint firstAttribute="trailing" secondItem="6MX-mc-g4a" secondAttribute="trailing" constant="22" id="K5o-g5-jOP"/>
                                     <constraint firstAttribute="trailing" secondItem="Qeg-dQ-DD4" secondAttribute="trailing" constant="20" id="MiA-0R-TU4"/>
@@ -207,11 +232,13 @@
                                     <constraint firstItem="viZ-qe-6Sr" firstAttribute="leading" secondItem="697-da-wEz" secondAttribute="leading" constant="20" id="XtG-gh-KSU"/>
                                     <constraint firstItem="Qeg-dQ-DD4" firstAttribute="leading" secondItem="697-da-wEz" secondAttribute="leading" constant="20" id="YbJ-Dz-ozw"/>
                                     <constraint firstItem="D8b-eD-nEN" firstAttribute="top" secondItem="6MX-mc-g4a" secondAttribute="bottom" constant="20" id="boE-sV-Lz6"/>
-                                    <constraint firstAttribute="height" constant="450" id="cmH-Y1-zXC"/>
+                                    <constraint firstAttribute="height" constant="530" id="cmH-Y1-zXC"/>
                                     <constraint firstItem="kHg-iM-qHA" firstAttribute="leading" secondItem="697-da-wEz" secondAttribute="leading" constant="20" id="eCJ-AS-KP1"/>
                                     <constraint firstAttribute="trailing" secondItem="kHg-iM-qHA" secondAttribute="trailing" constant="20" id="hBF-IK-Ewz"/>
                                     <constraint firstItem="iUt-2g-iVu" firstAttribute="leading" secondItem="697-da-wEz" secondAttribute="leading" constant="10" id="o1A-Sc-c6V"/>
+                                    <constraint firstItem="XuP-eJ-el8" firstAttribute="top" secondItem="iUt-2g-iVu" secondAttribute="bottom" constant="30" id="rOz-7J-n2Q"/>
                                     <constraint firstItem="kHg-iM-qHA" firstAttribute="top" secondItem="D8b-eD-nEN" secondAttribute="bottom" constant="40" id="vNQ-Rv-azf"/>
+                                    <constraint firstAttribute="trailing" secondItem="XuP-eJ-el8" secondAttribute="trailing" constant="22" id="y7a-dH-RhX"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
@@ -241,6 +268,7 @@
                         <outlet property="loginView" destination="697-da-wEz" id="RHj-So-pGU"/>
                         <outlet property="passwordtxtField" destination="D8b-eD-nEN" id="NfM-K5-c6o"/>
                         <outlet property="signupBtn" destination="viZ-qe-6Sr" id="oJD-rV-MML"/>
+                        <outlet property="usernametxtField" destination="XuP-eJ-el8" id="qHs-Bt-dGG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqt-ga-Ksa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
